--- a/index.css
+++ b/index.css
@@ -1,8 +1,7 @@
-
-body{
+* {
     margin:0;
-    width:100%;
-    height:100;
+    padding: 0;
+    max-width:100vw;
 }
 .parent-home
 {
@@ -12,7 +11,7 @@ body{
      /* background-size:cover;   */
     /* filter: blur(3px);  */
     
-    width:100%; 
+    /* width:100%;  */
     height:100vh; 
     display: flex;
      justify-content: center; 
@@ -159,10 +158,11 @@ img{
       }
       .centerdiv
       {
-        /* height: 100vh;  */
+         height: 50vh;  
         display: flex;
          justify-content:center; 
          align-items: end
+         
       }
       .cont{
          height: 100px;
