--- a/index.css
+++ b/index.css
@@ -1,207 +1,259 @@
-* {
-    margin:0;
-    padding: 0;
-    max-width:100vw;
+*{
+  box-sizing: border-box;
+}
+body{
+  margin:0;
+  width:100%;
+  height:100;
 }
 .parent-home
 {
-     /* background-color:aquamarine;  */
-     background-image:url("./media/pexels-luis-gomes-546819.jpg") ; 
-     /* background-repeat: no-repeat;   */
-     /* background-size:cover;   */
-    /* filter: blur(3px);  */
-    
-    /* width:100%;  */
-    height:100vh; 
-    display: flex;
-     justify-content: center; 
-     align-items: center 
+   /* background-color:aquamarine;  */
+   background-image:url("./media/pexels-luis-gomes-546819.jpg") ; 
+   /* background-repeat: no-repeat;   */
+   /* background-size:cover;   */
+  /* filter: blur(3px);  */
+  
+  width:100%; 
+  height:100vh; 
+  display: flex;
+   justify-content: center; 
+   align-items: center 
 }
 .text
 {   
-    
-     text-align:left;
-      /* background-color: rgb(0,0,0,0.4); */
-    /* background-color: black; */
-    /* color:white; */
-    width:400px;
-    /* padding:70px 0 70px 0; */
-    font-family: sans-serif;
-    color: white;
-    /* margin-left: 0px; */
-   
+  
+   text-align:left;
+    /* background-color: rgb(0,0,0,0.4); */
+  /* background-color: black; */
+  /* color:white; */
+  width:400px;
+  /* padding:70px 0 70px 0; */
+  font-family: sans-serif;
+  color: white;
+  /* margin-left: 0px; */
+ 
 }  
-    
-   
+  
+ 
 
 img{
-    border-radius: 50%;
-    max-width:60%;
-    max-height: 60%;
-    margin-left: 80px;
-    
+  border-radius: 50%;
+  max-width:60%;
+  max-height: 60%;
+  margin-left: 80px;
+  
 }
 
 #nav
 {  
-    
-    position: absolute; 
-    background-color: aquamarine;
-    padding-left: 0px;
-    text-align: right;
-    width: 100%;
-    height: 10%;
-    padding-top: 20px;
+  
+  position: absolute; 
+  background-color: aquamarine;
+  padding-left: 0px;
+  text-align: right;
+  width: 100%;
+  height: 10%;
+  padding-top: 20px;
 
 }
 #nbar
 {
-    text-decoration: none;
-    display: inline;
-    padding: 30px;
-    font-size: xx-large;
+  text-decoration: none;
+  display: inline;
+  padding: 30px;
+  font-size: xx-large;
 
 }
 #pf
 {
-    text-align: left;
-    font-size: x-large
+  text-align: left;
+  font-size: x-large
 }
 
 /* skills */
-   .skill-section
-   {
-    position: relative;
-    margin:100px 0
-   }
-   
-   .heading{
-    text-align: center;
-    font-size: 60px;
-    color: white;
-    margin-bottom: 50px;
-    margin-top: 0px;
-   }
+ .skill-section
+ {
+  position: relative;
+  margin:100px 0
+ }
+ 
+ .heading{
+  text-align: center;
+  font-size: 60px;
+  color: white;
+  margin-bottom: 50px;
+  margin-top: 0px;
+ }
 
-   .skill-container{
-    width: 95%;
-    margin: 0px;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap:90px;
-    color: #fff;
-   }
-   .skill-card
-   {
-    position: relative;
-    }
-    .skill-img{
-        display: block;
-        margin: auto;
-         height: 150px;
-         width: 150px;
-         border-radius: 0%;
+ .skill-container{
+  width: 95%;
+  margin: 0px;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  grid-gap:90px;
+  color: #fff;
+ }
+ .skill-card
+ {
+  position: relative;
+  }
+  .skill-img{
+      display: block;
+      margin: auto;
+       height: 150px;
+       width: 150px;
+       border-radius: 0%;
 
+  }
+  .skill-name
+  {
+      font-size: 30px;
+      text-align: center;
+      margin: 30px 0 20px;
+  }
+  .skill-info
+  {
+     text-align: center;
+     font-size: 18px;
+     opacity: 0.5;
+     line-height: 30px; 
+  }
+  .skill-level
+  {
+      position: absolute;
+      top: 80px;
+      right:200px;
+      width: 70px;
+      height: 70px;
+      display: flex;
+      justify-content: center;
+      font-size: 20px;
+      border-radius: 50%;
+      border: 10px solid;
+  }
+  .skill-card:nth-child(1) .skill-level{
+      background: #ff4f4f28;
+      border-color: red;
+      color:rgb(240, 236, 236);
+  }
+  .skill-card:nth-child(2) .skill-level{
+      background: #ff4f4f28;
+      border-color: green;
+      color:rgb(244, 238, 238);
+  }
+  .skill-card:nth-child(3) .skill-level{
+      background: #ff4f4f28;
+      border-color: blue;
+      color:rgb(249, 243, 243);
+  }
+  .skill-card:nth-child(4) .skill-level{
+      background: #ff4f4f28;
+      border-color: yellow;
+      color:white;
+  }  
+
+
+
+  /* contact */
+    body{
+      margin: 0; padding: 0;
     }
-    .skill-name
+    .centerdiv
     {
-        font-size: 30px;
-        text-align: center;
-        margin: 30px 0 20px;
+      /* height: 100vh;  */
+      display: flex;
+       justify-content:center; 
+       align-items: end
     }
-    .skill-info
-    {
-       text-align: center;
-       font-size: 18px;
-       opacity: 0.5;
-       line-height: 30px; 
-    }
-    .skill-level
-    {
-        position: absolute;
-        top: 80px;
-        right:200px;
-        width: 70px;
-        height: 70px;
-        display: flex;
-        justify-content: center;
-        font-size: 20px;
+    .cont{
+       height: 100px;
+        width: 100px; 
         border-radius: 50%;
-        border: 10px solid;
+         text-align: center;
+         background-color: rgb(179, 175, 151); 
+         margin: 10px; 
+         line-height:110px
     }
-    .skill-card:nth-child(1) .skill-level{
-        background: #ff4f4f28;
-        border-color: red;
-        color:rgb(240, 236, 236);
+    i{
+      font-size: 30px;
     }
-    .skill-card:nth-child(2) .skill-level{
-        background: #ff4f4f28;
-        border-color: green;
-        color:rgb(244, 238, 238);
+    a:hover i{
+      transform: scale(1.4);
     }
-    .skill-card:nth-child(3) .skill-level{
-        background: #ff4f4f28;
-        border-color: blue;
-        color:rgb(249, 243, 243);
+    .contact
+    {
+      position: relative;
+      font-family: sans-serif;
+      padding: 50px 100px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      /* flex-direction: column; */
     }
-    .skill-card:nth-child(4) .skill-level{
-        background: #ff4f4f28;
-        border-color: yellow;
-        color:white;
-    }  
+    .cont-content
+    {
+      text-align: center;
+      font-size: 30px;
+      
+    }
 
 
+    /* projects */
+      .project-section{
+        width: 100%;
+        min-height: 100vh;
+        padding: 150px 100px 100px;
+        transition: 1s;
+      }
 
-    /* contact */
-      body{
-        margin: 0; padding: 0;
-      }
-      .centerdiv
+      .project-heading
       {
-         height: 50vh;  
-        display: flex;
-         justify-content:center; 
-         align-items: end
-         
-      }
-      .cont{
-         height: 100px;
-          width: 100px; 
-          border-radius: 50%;
-           text-align: center;
-           background-color: rgb(179, 175, 151); 
-           margin: 10px; 
-           line-height:110px
-      }
-      i{
-        font-size: 30px;
-      }
-      a:hover i{
-        transform: scale(1.4);
-      }
-      .contact
-      {
-        position: relative;
-        font-family: sans-serif;
-        padding: 50px 100px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        /* flex-direction: column; */
-      }
-      .cont-content
-      {
+        font-size: 100px;
+        background: '';
         text-align: center;
-        font-size: 30px;
-        
+        margin-bottom: 50px;
+        color: '';
+        background-clip: text;
+
       }
 
+    .project-container
+    {
+      display: grid;
+      grid-template-columns: (2,1fr);
+      grid-gap: 100px;
+    }
+     .project-card
+     {
+      height: 400px;
+      position: relative;
+     }
+    .project-img
+    {
+      width:50%;
+      height: 50%;
+      position: absolute;
+      object-fit: cover;
+      transition: .5s;
+    }
+    .project-content
+    {
+      position: relative;
+      padding: 40px;
+      color:palevioletred;
+      transition: .5s;
+    }
+    .project-title
+    {
+      font-size: 50px;
+      text-align: center;
+      font-weight: 300;
+    }
 
-      /* projects */
-
-
-      
-    
-      
-
-      
+    .project-info{
+      margin: 40px;
+      font-size: 20px;
+      line-height: 30px;
+      text-align: center;
+    }
